@@ -1,4 +1,4 @@
 DIST python-distutils-extra_1.91.2.tar.gz 13645 RMD160 2a833b11b8defb213a93758517c6c8e929cba0ac SHA1 e0a26f21c73a7cb585fe914b1d8af9469eb5decd SHA256 32b4b80764959f9fb2375c98566e456a17c4851c711551fb740a89ac3035da24
-EBUILD python-distutils-extra-1.91.2.ebuild 494 RMD160 fcd7f95b67f4a2a283feead88817a0bcdeb71b9c SHA1 570c3b376159cbee9ccbfe650c8051e630efe7da SHA256 80ca5f47ec133cbb79fb6f76894fe53734023a260b4ce9e3a2a3fc0be7463585
-MISC ChangeLog 332 RMD160 868be21f0a98ee54d9160bb835340d601edc8ae6 SHA1 5182df0b6580d72d9a2de42f3aac0c2e9990359a SHA256 9de460224c2d8b89f7322020ca1802e55ba24bb6596433686dde6be4ded9b5a9
+EBUILD python-distutils-extra-1.91.2.ebuild 545 RMD160 7d6072e16259c820bc208bdc8ce05de18eb84a43 SHA1 f8e3ce5d499d20cd12f1c63e24d287c741e846cd SHA256 0f6d0b545ef13d9bb575da1c96f9f7d1b30d01f325322208651d3d66f2c576a2
+MISC ChangeLog 442 RMD160 09e323dc38fab30e27469ee90fd268791c648b18 SHA1 b0085447baa0d6cd96443c59ff303f67cdd79576 SHA256 f3c2fd09955c34cac8313f59639117db4458c50fc306206639a6230f8de27886
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
