@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Apr 2009; Christian Ruppert <idl0r@gentoo.org>
+  python-distutils-extra-1.91.2.ebuild:
+  Fixed depends.
+
   16 Feb 2009; PERIER Romain (mrpouet) <mrpouet@tuxfamily.org>
   +python-distutils-extra-1.91.2.ebuild, +metadata.xml:
   New Ebuild for bug 257261 thanks to Tommy[D],idl0r and darkside_ for review
